--- a/index.html
+++ b/index.html
@@ -190,11 +190,10 @@
                 </div>
             </div>
             <div class="footerRightMenu">
-                <span class="copyright">@John Doe. All rights reserved. 2022.</span>
+                <span class="copyright">@Krishna Sharma. All rights reserved. 2024.</span>
             </div>
         </div>
     </footer>
     <script data-two_delay_id="two_65e96e2021980" data-two_delay_src="./app.js"></script>
 </body>
-
 </html>
